# ArduinoCore-API

./: CMakeLists.txt
include/: Arduino.h
test/: CMakeLists.txt
test/src/Print/: test_print.cpp
